<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Levels"
    android:background="@drawable/numbers_bg">

    <TextView
        android:id="@+id/pickalevel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="pick a level"
        android:paddingLeft="60dp"
        android:textColor="@color/white"
        android:background="@drawable/pick_banner"
        android:textSize="50sp" />


    <Button
        android:id="@+id/lvl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="132dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="@string/level_1"
        />
    <Button
        android:id="@+id/lvl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_2"
        android:layout_below="@+id/lvl1"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        />
    <Button
        android:id="@+id/lvl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_3"
        android:layout_below="@+id/lvl2"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_margin="3dp"
        />
    <Button
        android:id="@+id/lvl4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_4"
        android:layout_below="@+id/lvl3"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_margin="3dp"
    />
    <Button
        android:id="@+id/lvl5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_5"
        android:layout_below="@+id/lvl4"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_margin="3dp"
        />
    <Button
        android:id="@+id/lvl6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_6"
        android:layout_below="@+id/lvl5"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_margin="3dp"
        />
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_below="@+id/lvl6"
        android:textColor="@color/white"
        android:background="@color/red"
        android:layout_margin="3dp"
        />

</RelativeLayout>