<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/numbers_bg">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/header"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/play"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/play"
        android:gravity="center"
        android:text="@string/play"
        android:textStyle="bold"
        android:layout_margin="7dp"/>

    <Button
        android:id="@+id/scoreboard"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true"
        android:text="@string/scoreboard"
        android:background="@drawable/scoreboard"
        android:textStyle="bold"
        android:layout_margin="7dp"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/scoreboard"
        android:layout_centerHorizontal="true"
        android:background="@drawable/exit"
        android:text="@string/exit"
        android:textStyle="bold"
        android:layout_margin="7dp"/>
</RelativeLayout>