<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreBoard">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/pick_banner"
        android:paddingLeft="60dp"
        android:text="@string/scoreboard"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerText">
        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tableLayout"
                android:stretchColumns="0,1,2"
                android:layout_margin="4dp"
                android:gravity="center" />

            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/scoreboard"
                android:text="@string/back"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/tableLayout"/>
            <Button
                android:id="@+id/main"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:layout_below="@+id/back"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/exit"
                android:text="@string/main"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>