<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/drill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/secondnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />


    </LinearLayout>

    <EditText
        android:id="@+id/answer"
        android:layout_width="238dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/drill"
        android:layout_marginStart="73dp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/drill"
        android:layout_toEndOf="@+id/answer"
        />
    <TextView
        android:id="@+id/correctanswer"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/timer"
        android:layout_toEndOf="@+id/answer"/>
    <LinearLayout
        android:id="@+id/firstrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/answer">

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="1"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_1"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="2"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_2"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="3"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_3"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/delete"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#ff0000"
            android:textColor="#fff"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/secondrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/firstrow">

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="4"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_4"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="5"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_5"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="6"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_6"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="-"
            android:textSize="50dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#0011ff"
            android:textColor="#fff"
            android:id="@+id/btn_negative"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/thirdrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/secondrow">

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="7"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_7"
            />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="8"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_8"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="9"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_9"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="0"
            android:textSize="20dp"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="#000"
            android:textColor="#fff"
            android:id="@+id/btn_0"/>
    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/main" />

    <ImageView
        android:id="@+id/wrong"
        android:layout_width="73dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/drill"
        android:src="@drawable/ic_wrong"
        android:visibility="gone" />

    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thirdrow"
        android:layout_centerHorizontal="true"
        android:background="#00ff15"
        android:text="@string/enter"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>